--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
-/.classpath
-/.project
-/target/
-/.settings/
-/bin/
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+.project
+.externalToolBuilders/
+*.launch
+.classpath
+.factorypath
+.buildpath
+.target
+.tern-project
+.springBeans
+.recommenders/
