--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 /.settings/
 /build/
 
+.idea/
+*.iml
+
 # Created by https://www.gitignore.io/api/eclipse,intellij
 # Edit at https://www.gitignore.io/?templates=eclipse,intellij
 
