initial commit with maven project setting

--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>2019_1st_intern</groupId>
-  <artifactId>2019_1st_intern</artifactId>
+  <groupId>kr.or.connect</groupId>
+  <artifactId>pjt2JaewonLee</artifactId>
+  <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
- 
+  <name>pjt2JaewonLee Maven Webapp</name>
+  <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -17,5 +15,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
+  <build>
+    <finalName>pjt2JaewonLee</finalName>
+  </build>
 </project>
