--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,20 @@
 			<version>5.1.45</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.4</version>
+		</dependency>
+		
+		<!-- JSON In Java » version : 20180813 , https://mvnrepository.com/artifact/org.json/json 
+			https://mvnrepository.com/artifact/org.json/json/20180813 -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180813</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
