--- a/.gitignore
+++ b/.gitignore
@@ -191,4 +191,6 @@ buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
 
+.idea/
+*.iml
 # End of https://www.gitignore.io/api/java,maven,eclipse,intellij,java-web
