local property 파일 깃에 안보내지게 변경

--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,12 @@ tmp/
 *.bak
 *.swp
 *~.nib
+
 local.properties
 .settings/
 .loadpath
 .recommenders
-
+.src/main/resources/
 # External tool builders
 .externalToolBuilders/
 
