--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.idea/
+*.iml
 
 # Created by https://www.gitignore.io/api/java,maven,eclipse,intellij,java-web
 # Edit at https://www.gitignore.io/?templates=java,maven,eclipse,intellij,java-web
