--- a/src/main/webapps/WEB-INF/web.xml
+++ b/src/main/webapps/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
 	<resource-ref>
 		<description>connection</description>
-		<res-ref-name>jdbc/mysql</res-ref-name>
+		<res-ref-name>jdbc/mysql/todo_db</res-ref-name>
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
