--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+META-INF/
 
 # Created by https://www.gitignore.io/api/java,maven,eclipse,intellij,java-web
 # Edit at https://www.gitignore.io/?templates=java,maven,eclipse,intellij,java-web
