properties 이름 변경, 오타 수정

--- a/src/main/java/com/nts/todolist/common/jdbc.properties
+++ b/src/main/java/com/nts/todolist/common/jdbc.properties
@@ -1,4 +1,4 @@
-#driver.properties
+#jdbc.properties
 url=jdbc:mysql://10.113.116.52:13306/user3?serverTimezone=Asia/Seoul&useSSL=false
 user=user3
 password=user3
