--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>TO-DO LIST</name>
 	<url>http://maven.apache.org</url>
+	
+	<properties>
+		<!-- web.xml 파일을 삭제해도 eclipse에서 오류가 발생하지 않는다. -->
+		<failOnMissingWebXml>false</failOnMissingWebXml>
+	</properties>
+	
 
 	<dependencies>
 		<dependency>
