--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,6 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 
 # End of https://www.gitignore.io/api/maven,eclipse
+
+# DB InfoFile
+/src/main/resources/application.properties
