minor algorithm change, license, comment author mark added

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
+<!--
+	Copyright 2019 NAVER Corp.
+	All rights reserved.
+	Except in the case of internal use for NAVER,
+	unauthorized use of redistribution of this software are strongly prohibited.
+ -->
+ <!-- Author: Jaewon Lee, lee.jaewon@nts-corp.com -->
 <web-app>
 	<display-name>Archetype Created Web Application</display-name>
 <context-param>
