--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,10 @@
+<!--
+	Copyright 2019 NAVER Corp.
+	All rights reserved.
+	Except in the case of internal use for NAVER,
+	unauthorized use of redistribution of this software are strongly prohibited.
+ -->
+<!-- Author: Jaewon Lee, lee.jaewon@nts-corp.com -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
