--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/reservation?serverTimezone=Asia/Seoul
-spring.datasource.username=root
-spring.datasource.password=!@#123
+spring.datasource.url=jdbc:mysql://10.113.116.52:13306/user8?serverTimezone=Asia/Seoul
+spring.datasource.username=user8
+spring.datasource.password=user8
