web.xml 및 defaultErrorPage.jsp 수정

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,4 +8,8 @@
 		<error-code>404</error-code>
 		<location>/WEB-INF/error/dafaultErrorPage.jsp</location>
 	</error-page>
+	
+	<welcome-file-list>
+		<welcome-file>main</welcome-file>
+	</welcome-file-list>
 </web-app>
