--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -54,8 +54,30 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+
+	<error-page>
+		<error-code>400</error-code>
+		<location>/WEB-INF/views/error/errorPage.jsp</location>
+	</error-page>
 	
 	<error-page>
-	    <location>/errors</location>
+		<error-code>403</error-code>
+		<location>/WEB-INF/views/error/errorPage.jsp</location>
 	</error-page>
+	
+	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/views/error/errorPage.jsp</location>
+	</error-page>
+
+	<error-page>
+		<error-code>500</error-code>
+    	<location>/WEB-INF/views/error/errorPage.jsp</location>
+	</error-page>
+	
+	<error-page>
+		<exception-type>java.lang.Throwable</exception-type>
+    	<location>/WEB-INF/views/error/errorPage.jsp</location>
+	</error-page>
+
 </web-app>
