--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 	</context-param>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>com.nts.config.ApplicationConfig
+		<param-value>com.nts.project3.config.ApplicationConfig
 		</param-value>
 	</context-param>
 	<listener>
@@ -30,7 +30,7 @@
 		</init-param>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>com.nts.config.WebMvcContextConfiguration
+			<param-value>com.nts.project3.config.WebMvcContextConfiguration
 			</param-value>
 		</init-param>
 		<init-param>
