--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver 
-spring.datasource.url=jdbc:mysql://localhost:3306/reservation?useUnicode=true&characterEncoding=utf8 
-spring.datasource.username=root
-spring.datasource.password=root
+#MySql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://10.113.116.52:13306/user3?serverTimezone=Asia/Seoul&useSSL=false
+spring.datasource.username=user3
+spring.datasource.password=user3
