--- a/src/main/package.json
+++ b/src/main/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"develop": "webpack -w --mode development --devtool inline-source-map",
-	"build": "webpack --mode production"
+    "develop": "webpack -w --mode development --devtool inline-source-map",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "handlebars": "^4.0.12",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
   }
