--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 	</context-param>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>com.nts.project3.config.ApplicationConfig
+		<param-value>com.nts.reservation.config.ApplicationConfig
 		</param-value>
 	</context-param>
 	<listener>
@@ -29,7 +29,7 @@
 		</init-param>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>com.nts.project3.config.WebMvcContextConfiguration
+			<param-value>com.nts.reservation.config.WebMvcContextConfiguration
 			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
@@ -52,7 +52,7 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
+	
 	<error-page>
 		<error-code>404</error-code>
 		<location>/WEB-INF/views/error/invalidAccess.jsp</location>
