--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/reservation?useUnicode=true&autoReconnect=true&useSSL=false&serverTimezone=UTC 
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://10.113.116.52:13306/user9?useUnicode=true&autoReconnect=true&useSSL=false&serverTimezone=UTC 
+spring.datasource.username=user9
+spring.datasource.password=user9
