패키지 구조 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/user2?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://10.113.116.52:13306/user2?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=user2
 spring.datasource.password=1234
