--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app>
-	<display-name>Resevation</display-name>
+	<display-name>Reservation</display-name>
 
 	<!-- Spring DI 등록 -->
 	<context-param>
