--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <failOnMissingWebXml>false</failOnMissingWebXml>
     <spring.version>4.3.14.RELEASE</spring.version>
+    <spring.security.version>4.2.11.RELEASE</spring.security.version>
   </properties>
  
   <dependencies>
@@ -39,6 +40,22 @@
 		<version>${spring.version}</version>
 	</dependency>
 	
+	<!-- Spring security -->
+	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-web</artifactId>
+	    <version>${spring.security.version}</version>
+	</dependency>
+	<dependency>
+    	<groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-core</artifactId>
+	    <version>${spring.security.version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-config</artifactId>
+	    <version>${spring.security.version}</version>
+	</dependency>	
 	<!-- MYSQL -->
 	<dependency>
 		<groupId>mysql</groupId>
@@ -71,7 +88,17 @@
 		<artifactId>jstl</artifactId>
 		<version>1.2</version>
 	</dependency>
-	
+	<!-- Valid -->
+	<dependency>
+	    <groupId>javax.validation</groupId>
+	    <artifactId>validation-api</artifactId>
+	    <version>1.1.0.Final</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.hibernate</groupId>
+	    <artifactId>hibernate-validator</artifactId>
+	    <version>5.4.3.Final</version>
+	</dependency>
 	<!-- Jackson Module -->
 	<dependency>
 		<groupId>com.fasterxml.jackson.core</groupId>
