Error Page 수정 및 각 Exception 별 처리

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-/.classpath
-/.project
-/target/
-/.settings/
-/bin/
+/src/main/resources/application.properties
+target
+bin
+.classpath
+.project
+.settings
