--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,14 @@
 	<groupId>com.nts</groupId>
 	<artifactId>reservation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>reservation Maven Webapp</name>
-	<url>http://maven.apache.org</url>
+	<name>reservation</name>
+	<url>localhost:8080</url>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.3.5.RELEASE</spring.version>
 		<jackson.version>2.9.8</jackson.version>
+		<jdk.version>1.8</jdk.version>
 	</properties>
 
 	<dependencies>
@@ -83,8 +85,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.6.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
 				</configuration>
 			</plugin>
 		</plugins>
