--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -64,12 +64,12 @@
 		<error-code>400</error-code>
 		<location>/WEB-INF/views/error/errorPage.jsp</location>
 	</error-page>
-	
+
 	<error-page>
 		<error-code>403</error-code>
 		<location>/WEB-INF/views/error/errorPage.jsp</location>
 	</error-page>
-	
+
 	<error-page>
 		<error-code>404</error-code>
 		<location>/WEB-INF/views/error/errorPage.jsp</location>
@@ -77,12 +77,15 @@
 
 	<error-page>
 		<error-code>500</error-code>
-    	<location>/WEB-INF/views/error/errorPage.jsp</location>
-	</error-page>
-	
-	<error-page>
-		<exception-type>java.lang.Throwable</exception-type>
-    	<location>/WEB-INF/views/error/errorPage.jsp</location>
+		<location>/WEB-INF/views/error/errorPage.jsp</location>
 	</error-page>
 
+	<error-page>
+		<exception-type>java.lang.Throwable</exception-type>
+		<location>/WEB-INF/views/error/errorPage.jsp</location>
+	</error-page>
+
+	<session-config>
+		<session-timeout>10</session-timeout>
+	</session-config>
 </web-app>
