--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,14 @@
 			<artifactId>jackson-datatype-jdk8</artifactId>
 			<version>${jackson2.version}</version>
 		</dependency>
+		
+		<!-- Lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.6</version>
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<finalName>Reservation</finalName>
