--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.url=jdbc:mysql://10.113.116.52:13306/user7?serverTimezone=Asia
 spring.datasource.username=user7
 spring.datasource.password=!@#test2091
 
-render.server.url=http://localhost:3000
+render.server.url=http://10.67.8.147:3000
