toString 메소드 ReflectionToStringBuiler 적용

--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,13 @@
 
 		</dependency>
 		
+		<!-- apache -->
+		<dependency>
+	   	 	<groupId>org.apache.commons</groupId>
+	   	 	<artifactId>commons-lang3</artifactId>
+	    	<version>3.0</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
