[이슈 #215] toString 대신 ToStringBuilder 사용
멤버변수가 바뀌면 toString 또한 매번 새로 만들어주어야하는 문제를 해결하기

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
 		<artifactId>jackson-datatype-jdk8</artifactId>
 		<version>${jackson2.version}</version>
 	</dependency> 
+	
+	<!-- ToStringBuilder -->
+	<dependency>
+	  <groupId>org.apache.commons</groupId>
+	  <artifactId>commons-lang3</artifactId>
+	  <version>3.4</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>reservation</finalName>
