--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,24 @@
 		<artifactId>jackson-datatype-jdk8</artifactId>
 		<version>2.9.4</version> 
 	</dependency>
-	
+	<!--  commons file Module -->
+	<dependency>
+        <groupId>commons-fileupload</groupId>
+        <artifactId>commons-fileupload</artifactId>
+        <version>1.2.1</version>
+    </dependency>
+    <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>1.4</version>
+    </dependency>
+    <!-- Logging Module -->
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.25</version>
+    </dependency>
+    
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
