--- a/pom.xml
+++ b/pom.xml
@@ -75,11 +75,18 @@
 			<version>${jackson.version}</version>
 		</dependency>
 
+		<!-- Mybatis -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.4.6</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>junit</groupId>
