--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,17 @@
         <artifactId>slf4j-api</artifactId>
         <version>1.7.25</version>
     </dependency>
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>1.2.3</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jcl-over-slf4j</artifactId>
+        <version>1.7.25</version>
+    </dependency>
     
     <dependency>
       <groupId>junit</groupId>
