--- a/src/renderingServer/package.json
+++ b/src/renderingServer/package.json
@@ -14,7 +14,8 @@
     "express": "^4.16.4",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-transition-group": "^2.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
