Valid 사용 및 Login이 필요한 url은 Interceptor을 통해 검증

--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,13 @@
 			<version>1.18.6</version>
 		</dependency>
 		
+		<!-- Valid Annotation -->
+		<dependency>
+        <groupId>javax.validation</groupId> 
+        <artifactId>validation-api</artifactId> 
+        <version>1.0.0.GA</version> 
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<finalName>Reservation</finalName>
